load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/whs-dot-hk/cdk-bazel-test
gazelle(name = "gazelle")

go_library(
    name = "cdk-bazel-test_lib",
    srcs = ["cdk-bazel-test.go"],
    importpath = "github.com/whs-dot-hk/cdk-bazel-test",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_cdk_go_awscdk_v2//:awscdk",
        "@com_github_aws_aws_cdk_go_awscdk_v2//awsec2",
        "@com_github_aws_constructs_go_constructs_v10//:constructs",
        "@com_github_aws_jsii_runtime_go//:jsii-runtime-go",
    ],
)

go_binary(
    name = "cdk-bazel-test",
    embed = [":cdk-bazel-test_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "cdk-bazel-test_test",
    srcs = ["cdk-bazel-test_test.go"],
    embed = [":cdk-bazel-test_lib"],
)
